# trino-mcp-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_server.py
trino_mcp/: __init__.py  requirements.txt  server.py
